[package]
name = "epicac"
version = "0.1.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
description = "Amazon EKS Pod Identity cross-account credentials"
documentation = "https://github.com/clowdhaus/epicac"
homepage = "https://github.com/clowdhaus/epicac"
repository = "https://github.com/clowdhaus/epicac"
license = "Apache-2.0"
edition = "2021"
categories = [
  "command-line-utilities",
  "kubernetes",
]

[dependencies]
http = "1.1"
miniserde = "0.1"

[dev-dependencies]
insta = "1.39"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.14.1"
ci = "github"
installers = []
targets = [
  # TODO - https://github.com/axodotdev/cargo-dist/issues/74
  # "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu", 
  "aarch64-pc-windows-msvc",
  "x86_64-pc-windows-msvc"
]
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.apt]
gcc-aarch64-linux-gnu = { version = '*', targets = ["aarch64-unknown-linux-gnu"] }